fix dice offcenter & commit message width/margin

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 100px;
+	margin-bottom: 2rem;
 	padding: 20px;
 	height: fit-content;
 	max-width: 80dvw;
